# opentelemetry-demo-basel-integration

./: .bazelignore  .bazelrc  .gitignore  1-bazel-integration.md  2-bazel-architecture-otel-shop-demo.md  3-bazel-concepts-for-otel-architecture.md  4-bazel-dev-environment-ubuntu.md  5-bazel-migration-task-backlog.md  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  Makefile  README.md  go.work  package-lock.json
.github/workflows/: bazel-release-oci.yml  checks.yml  component-build-images.yml  run-integration-tests.yml
docs/: otel-readme.md
docs/bazel/: README.md  baselines.md  build-style.md  charter.md  frontend-cypress-bazel.md  go-toolchain.md  oci-base-allowlist.md  oci-policy.md  oci-registry-push.md  proto-policy.md  quickstart.md  remote-cache.md  risk-register.md  service-tracker.md  test-tags.md
docs/bazel/milestones/: m0-completion.md  m1-completion.md  m2-completion.md  m3-completion.md  m4-completion.md  m5-completion.md
docs/knowledge-base/: 01-the-opentelemetry-astronomy-shop-demo.md  02-what-this-repo-was-before-bazel.md  03-how-i-used-the-planning-doc-series.md  04-bazel-core-ideas-i-wish-i-knew-on-day-one.md  06-milestone-m0-smoke-lint-and-ci-whisper.md  07-governance-charter-baselines-and-risk.md  08-milestone-m1-protobufs-as-the-spine.md  09-gazelle-go-importpaths-and-sanity.md  10-milestone-m2-first-language-wave.md  11-build-style-buildifier-and-bazelignore.md  12-rules-oci-oci-pull-and-digests.md  13-language-python-services-and-pip.md  14-language-node-payment-and-npm-with-aspect-rules-js.md  15-language-nextjs-frontend-the-beast.md  16-language-jvm-ad-and-kotlin-fraud-detection.md  17-language-dotnet-accounting-and-cart.md  18-language-rust-shipping.md  19-language-cpp-currency-and-proto-smoke.md  20-language-ruby-email-and-bundle-vendoring.md  21-language-elixir-flagd-ui-and-custom-mix-release.md  22-language-php-quote-and-composer.md  23-envoy-nginx-baked-config-and-oci.md  24-react-native-android-and-the-expo-edges.md  25-test-tags-flakes-network-and-sh-test-strategy.md  26-milestone-m3-when-the-wave-crashed-in-a-good-way.md  27-oci-policy-dual-build-dockerfile-vs-bazel.md  28-oci-push-checkout-and-registry-auth.md  29-milestone-m4-when-ci-became-the-boss.md  30-milestone-m5-allowlist-sbom-release-workflow.md  31-remote-cache-bazelrc-user-and-ci-secrets.md  32-make-wrappers-quickstart-and-contributing-notes.md  33-cypress-tracetest-and-what-i-deferred-on-purpose.md  34-debugging-playbook-what-usually-broke.md  35-interview-mode-patterns-i-can-defend.md  36-appendix-cheat-sheet-and-reading-order.md  37-starlark-runfiles-and-why-scripts-break-in-test.md  38-module-bazel-lock-and-reproducible-fetches.md  39-how-i-read-a-bazel-error-without-rage-quitting.md  40-git-history-as-my-lab-notebook.md  README.md
docs/planification/: README.md
pb/: BUILD.bazel
pb/extra/: README.md
src/accounting/: BUILD.bazel  README.md
src/ad/: BUILD.bazel
src/cart/: BUILD.bazel  README.md  run_cart_dotnet_test.sh
src/checkout/: BUILD.bazel  go.mod
src/checkout/kafka/: BUILD.bazel
src/checkout/money/: BUILD.bazel
src/currency/: BUILD.bazel  currency_includes.bzl
src/currency/src/: currency_proto_smoke_test.cpp
src/email/: BUILD.bazel  Gemfile  README.md
src/email/test/: gems_load_test.rb
src/flagd-ui/: BUILD.bazel  README.md  run_mix_test.sh
src/fraud-detection/: BUILD.bazel
src/frontend/: BUILD.bazel  bazel_next_worker_shim.cjs  cypress.config.ts  eslint.config.mjs  eslint_cli.cjs  next.config.js  next_build_cli.cjs  package-lock.json  package.json  pnpm-lock.yaml
src/frontend-proxy/: BUILD.bazel  README.md  bake_envoy.sh  run_frontend_proxy_config_test.sh
src/frontend/gateways/: Api.gateway.ts
src/frontend/pages/api/product-ask-ai-assistant/[productId]/: index.ts
src/frontend/pages/api/product-reviews-avg-score/[productId]/: index.ts
src/frontend/providers/: ProductAIAssistant.provider.tsx  ProductReview.provider.tsx
src/frontend/utils/telemetry/: SessionIdProcessor.ts
src/image-provider/: BUILD.bazel  README.md  bake_nginx.sh  run_image_provider_config_test.sh
src/llm/: BUILD.bazel  app.py
src/load-generator/: BUILD.bazel  run_locust.py
src/payment/: BUILD.bazel  index.js  package.json  pnpm-lock.yaml
src/product-catalog/: BUILD.bazel  go.mod
src/product-reviews/: BUILD.bazel
src/quote/: BUILD.bazel  README.md  run_composer_smoke_test.sh
src/react-native-app/: .gitignore  BUILD.bazel  README.md  expo-env.d.ts  package-lock.json  package.json  run_rn_js_checks.sh
src/recommendation/: BUILD.bazel
src/shipping/: BUILD.bazel  Cargo.toml  README.md  cargo-bazel-lock.json
src/shipping/src/: lib.rs  main.rs
tools/bazel/: BUILD.bazel  composer_install.bzl  dotnet_publish.bzl  java_oci.bzl  mix_release.bzl  py_oci.bzl
tools/bazel/ci/: README.md  affected_targets.sh  ci_fast.sh  ci_full.sh  common.sh
tools/bazel/defs/: README.md
tools/bazel/lint/: checklicense.sh  lint_all.sh  markdownlint.sh  misspell.sh  sanitycheck.sh  yamllint.sh
tools/bazel/policy/: BUILD.bazel  check_oci_allowlist.py  oci_base_allowlist.txt  run_oci_allowlist_check.sh
tools/bazel/rn_android/: BUILD.bazel  extension.bzl  rn_gradle_apk.bzl  sdk_repo.bzl
tools/python/: BUILD.bazel  README.md  requirements.in  requirements_loadgen.in  requirements_loadgen_lock.txt  requirements_lock.txt
