# Copyright The OpenTelemetry Authors
# SPDX-License-Identifier: Apache-2.0

"""Bazel module (Bzlmod) — OpenTelemetry Astronomy Shop demo fork."""

module(
    name = "otel_demo",
    version = "0.0.0",
)

# M1: protobuf + Go gRPC codegen. (Java / Python / C++ / TS proto rules add large
# toolchains; see //pb/extra for optional builds.)
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.5")
